# HonoursProject

./: HonoursDiary.docx  IPO_guidelines.doc  IPO_template.doc  README.md  Switch Rules.txt  appveyor.yml  project_diary_proforma.doc
Dissertation-Template/: Citations.bib  Dissertation-Dec.tex  Dissertation-Title.tex  Dissertation.aux  Dissertation.bbl  Dissertation.blg  Dissertation.lof  Dissertation.lot  Dissertation.out  Dissertation.tex  Dissertation.toc  Gantt-Charts.xlsx
Dissertation-Template/SupervisorMeetings/: 0 - Weekly Objectives Template.doc  1.doc.aux  2.doc  3.doc  4.doc  5.doc  6.doc  7.doc  8.doc  All.doc  Essay Subject.docx  Week9ReportReviewMeeting.docx
Game/: CMakeLists.txt  Output when trying to get dealing working.txt  appveyor.yml  card.cpp  card.h  main.cpp  player.h  readme.txt
Game/GameRecords/: GameRecords.txt  GameText.txt
Game/src/: Deck.h  GameManager.h  Ranking.h  Rules.h  card.h  main.cpp  player.h
IPO/: IPO with Simon's Annotations.doc  IPO.doc  ~$IPO.doc
Macbook Files/: HonoursDiary.docx  ~$noursDiary.docx
Slides Simon Sent/: Week 08 Multilayer Perceptrons.pptx  Week09NeuralNetsControl.pptx
Supervisor Meetings/: 0 - Weekly Objectives Template.doc  1.doc  project_diary_proforma.doc
